Turn management JSON models into records
The app-system task result models and the request bodies of the
management API handlers are records. JSON keys are unchanged
(RepoDumpResultJson keeps repositoryId); toString() still renders the
JSON used for task progress. Request-body defaults that were field
initialisers (importWithIds, importWithPermissions, enabled) move to
compact constructors. NodeExportResultJson drops the never-serialized
total field.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Nfw59S52x9S9Mo18FSiZ7T